# sk-llm-gateway

./: .env.example  .gitignore  API_DOCS.md  LICENSE  README.md  README_zh-CN.md  main.py  pyproject.toml  requirements.txt
.github/: FUNDING.yml
app/admin/: ui.py
app/api/v1/: api.py
app/api/v1/endpoints/: chat.py  vision.py
app/core/: config.py  model_manager.py
app/schemas/: chat.py
config/: active_models.json  models.yaml
config/providers/: alibaba.yaml  anthropic.yaml  baidu.yaml  bytedance.yaml  deepseek.yaml  google.yaml  moonshot.yaml  ollama.yaml  openai.yaml  siliconflow.yaml  tencent.yaml  xai.yaml  zhipu.yaml
docs/: Alibaba.md  Baidu.md  Bytedance.md  Kimi_moonshot.md  Ollama.md  Siliconflow.md  Tencent.md  Zhipu.md  deepseek.md
